restructured data cleaning to accomodate new datasets

--- a/glove.ipynb
+++ b/glove.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import pandas as pd\n",
     "from textblob import TextBlob\n",
-    "from langdetect import detect\n",
+    "\n",
     "import re\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem.wordnet import WordNetLemmatizer\n",
@@ -492,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
