--- a/dataset_cleaning/Dataset 2/load_clean_dataset_2.ipynb
+++ b/dataset_cleaning/Dataset 2/load_clean_dataset_2.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "from langdetect import detect\n",
-    "import glob\n"
+    "import glob\n",
+    "\n"
    ]
   },
   {
