Added more models and completed heatmap on SVMs

--- a/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
+++ b/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
@@ -1126,6 +1126,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df= pd.read_pickle(\"./../dataset3Cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1620\n",
+       "1     897\n",
+       "Name: Informativeness, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_df[\"Informativeness\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
