added shifts, twitter user data, and new main pipeline

--- a/dataset_cleaning/Dataset 1/load_clean_dataset1.ipynb
+++ b/dataset_cleaning/Dataset 1/load_clean_dataset1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df[\"orig_id\"].to_csv('dataset1IDs.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +347,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +769,7 @@
        "51      2013_West_Texas_explosion                1  446"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -800,14 +809,14 @@
    },
    "outputs": [],
    "source": [
-    "main_df.drop(main_df.columns.difference(['Informativeness','text']), 1, inplace=True)\n",
+    "main_df.drop(main_df.columns.difference(['orig_id','Informativeness','text']), 1, inplace=True)\n",
     "main_df['Informativeness']=main_df['Informativeness'].map(lambda x: 1 if(x=='Related and informative' ) else 0)\n",
     "# main_df['Informativeness']=main_df['Informativeness'].map(lambda x: 1 if(x=='Related and informative' or x=='Related - but not informative') else 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +827,7 @@
        "Name: Informativeness, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -863,12 +872,12 @@
     {
      "data": {
       "text/plain": [
-       "1    15193\n",
-       "0     9895\n",
+       "1    15314\n",
+       "0     9933\n",
        "Name: Informativeness, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -887,10 +896,10 @@
     {
      "data": {
       "text/plain": [
-       "25088"
+       "25247"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -946,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -963,16 +972,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Informativeness</th>\n",
+       "      <th>orig_id</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>211040709124440064</td>\n",
+       "      <td>#Intern #US #TATTOO #Wisconsin #Ohio #NC #PA #...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>210864180218167296</td>\n",
+       "      <td>Get in on the fun every Thursday with the @csi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>211157222699433985</td>\n",
+       "      <td>Welcome to our newest STUDENTathlete- Reagan B...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>211162553659830272</td>\n",
+       "      <td>Denver Post: #Colorado governor signs bill cre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>211216962162933761</td>\n",
+       "      <td>Pretty sure I'm going to live in Manitou Sprin...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Informativeness             orig_id  \\\n",
+       "0                0  211040709124440064   \n",
+       "1                0  210864180218167296   \n",
+       "2                0  211157222699433985   \n",
+       "3                0  211162553659830272   \n",
+       "4                0  211216962162933761   \n",
+       "\n",
+       "                                                text  \n",
+       "0  #Intern #US #TATTOO #Wisconsin #Ohio #NC #PA #...  \n",
+       "1  Get in on the fun every Thursday with the @csi...  \n",
+       "2  Welcome to our newest STUDENTathlete- Reagan B...  \n",
+       "3  Denver Post: #Colorado governor signs bill cre...  \n",
+       "4  Pretty sure I'm going to live in Manitou Sprin...  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df=main_df[['orig_id', 'Informativeness', 'text']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df.columns= ['id','Informativeness','text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18028"
+       "18159"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
