--- a/dataset_cleaning/Dataset 4/load_clean_dataset_4.ipynb
+++ b/dataset_cleaning/Dataset 4/load_clean_dataset_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "4  UNINFORMATIVE  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4  UNINFORMATIVE  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,29 +215,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7928"
+       "7929"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "main_df=main_df.drop(columns=[\"Id\"])\n",
+    "# main_df=main_df.drop(columns=[\"Id\"])\n",
     "main_df=main_df.drop_duplicates()\n",
     "len(main_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +261,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Id</th>\n",
        "      <th>Text</th>\n",
        "      <th>Label</th>\n",
        "    </tr>\n",
@@ -268,26 +269,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1241490299215634434</td>\n",
        "      <td>Official death toll from #covid19 in the Unite...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1245916400981381130</td>\n",
        "      <td>Dearest Mr. President @USER 1,169 coronavirus ...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1241132432402849793</td>\n",
        "      <td>Latest Updates March 20 ⚠️5274 new cases and 3...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1236107253666607104</td>\n",
        "      <td>真把公主不当干部 BREAKING: 21 people on Grand Princess...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1239673817552879619</td>\n",
        "      <td>OKLAHOMA CITY — The State Department of Educat...</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "    </tr>\n",
@@ -295,55 +301,74 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
+       "      <td>1245955124222099456</td>\n",
        "      <td>Coronavirus took hold in UK earlier than thoug...</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
+       "      <td>1241768801210904576</td>\n",
        "      <td>I talked with a man who is Rowan County’s seco...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
+       "      <td>1241172153040502795</td>\n",
        "      <td>Governor Wolf delaying enforcement of non-life...</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
+       "      <td>1239740620194766848</td>\n",
        "      <td>The Sheriff's Department has reduced the jail ...</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
+       "      <td>1236131066596986882</td>\n",
        "      <td>BREAKING NEWS: 2 possible cases of #COVIDー19 i...</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7928 rows × 2 columns</p>\n",
+       "<p>7929 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                  Text          Label\n",
-       "0    Official death toll from #covid19 in the Unite...    INFORMATIVE\n",
-       "1    Dearest Mr. President @USER 1,169 coronavirus ...    INFORMATIVE\n",
-       "2    Latest Updates March 20 ⚠️5274 new cases and 3...    INFORMATIVE\n",
-       "3    真把公主不当干部 BREAKING: 21 people on Grand Princess...    INFORMATIVE\n",
-       "4    OKLAHOMA CITY — The State Department of Educat...  UNINFORMATIVE\n",
-       "..                                                 ...            ...\n",
-       "995  Coronavirus took hold in UK earlier than thoug...  UNINFORMATIVE\n",
-       "996  I talked with a man who is Rowan County’s seco...    INFORMATIVE\n",
-       "997  Governor Wolf delaying enforcement of non-life...  UNINFORMATIVE\n",
-       "998  The Sheriff's Department has reduced the jail ...  UNINFORMATIVE\n",
-       "999  BREAKING NEWS: 2 possible cases of #COVIDー19 i...    INFORMATIVE\n",
+       "                      Id                                               Text  \\\n",
+       "0    1241490299215634434  Official death toll from #covid19 in the Unite...   \n",
+       "1    1245916400981381130  Dearest Mr. President @USER 1,169 coronavirus ...   \n",
+       "2    1241132432402849793  Latest Updates March 20 ⚠️5274 new cases and 3...   \n",
+       "3    1236107253666607104  真把公主不当干部 BREAKING: 21 people on Grand Princess...   \n",
+       "4    1239673817552879619  OKLAHOMA CITY — The State Department of Educat...   \n",
+       "..                   ...                                                ...   \n",
+       "995  1245955124222099456  Coronavirus took hold in UK earlier than thoug...   \n",
+       "996  1241768801210904576  I talked with a man who is Rowan County’s seco...   \n",
+       "997  1241172153040502795  Governor Wolf delaying enforcement of non-life...   \n",
+       "998  1239740620194766848  The Sheriff's Department has reduced the jail ...   \n",
+       "999  1236131066596986882  BREAKING NEWS: 2 possible cases of #COVIDー19 i...   \n",
        "\n",
-       "[7928 rows x 2 columns]"
+       "             Label  \n",
+       "0      INFORMATIVE  \n",
+       "1      INFORMATIVE  \n",
+       "2      INFORMATIVE  \n",
+       "3      INFORMATIVE  \n",
+       "4    UNINFORMATIVE  \n",
+       "..             ...  \n",
+       "995  UNINFORMATIVE  \n",
+       "996    INFORMATIVE  \n",
+       "997  UNINFORMATIVE  \n",
+       "998  UNINFORMATIVE  \n",
+       "999    INFORMATIVE  \n",
+       "\n",
+       "[7929 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7927"
+       "7929"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_df=main_df[[\"Label\",\"Text\"]]"
+    "main_df=main_df[[\"Id\", \"Label\",\"Text\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,6 +448,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Id</th>\n",
        "      <th>Label</th>\n",
        "      <th>Text</th>\n",
        "    </tr>\n",
@@ -430,26 +456,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1241490299215634434</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>Official death toll from #covid19 in the Unite...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1245916400981381130</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>Dearest Mr. President @USER 1,169 coronavirus ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1241132432402849793</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>Latest Updates March 20 ⚠️5274 new cases and 3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>1236107253666607104</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>真把公主不当干部 BREAKING: 21 people on Grand Princess...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1239673817552879619</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "      <td>OKLAHOMA CITY — The State Department of Educat...</td>\n",
        "    </tr>\n",
@@ -457,55 +488,74 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
+       "      <td>1245955124222099456</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "      <td>Coronavirus took hold in UK earlier than thoug...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
+       "      <td>1241768801210904576</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>I talked with a man who is Rowan County’s seco...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
+       "      <td>1241172153040502795</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "      <td>Governor Wolf delaying enforcement of non-life...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
+       "      <td>1239740620194766848</td>\n",
        "      <td>UNINFORMATIVE</td>\n",
        "      <td>The Sheriff's Department has reduced the jail ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
+       "      <td>1236131066596986882</td>\n",
        "      <td>INFORMATIVE</td>\n",
        "      <td>BREAKING NEWS: 2 possible cases of #COVIDー19 i...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7927 rows × 2 columns</p>\n",
+       "<p>7929 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Label                                               Text\n",
-       "0      INFORMATIVE  Official death toll from #covid19 in the Unite...\n",
-       "1      INFORMATIVE  Dearest Mr. President @USER 1,169 coronavirus ...\n",
-       "2      INFORMATIVE  Latest Updates March 20 ⚠️5274 new cases and 3...\n",
-       "3      INFORMATIVE  真把公主不当干部 BREAKING: 21 people on Grand Princess...\n",
-       "4    UNINFORMATIVE  OKLAHOMA CITY — The State Department of Educat...\n",
-       "..             ...                                                ...\n",
-       "995  UNINFORMATIVE  Coronavirus took hold in UK earlier than thoug...\n",
-       "996    INFORMATIVE  I talked with a man who is Rowan County’s seco...\n",
-       "997  UNINFORMATIVE  Governor Wolf delaying enforcement of non-life...\n",
-       "998  UNINFORMATIVE  The Sheriff's Department has reduced the jail ...\n",
-       "999    INFORMATIVE  BREAKING NEWS: 2 possible cases of #COVIDー19 i...\n",
+       "                      Id          Label  \\\n",
+       "0    1241490299215634434    INFORMATIVE   \n",
+       "1    1245916400981381130    INFORMATIVE   \n",
+       "2    1241132432402849793    INFORMATIVE   \n",
+       "3    1236107253666607104    INFORMATIVE   \n",
+       "4    1239673817552879619  UNINFORMATIVE   \n",
+       "..                   ...            ...   \n",
+       "995  1245955124222099456  UNINFORMATIVE   \n",
+       "996  1241768801210904576    INFORMATIVE   \n",
+       "997  1241172153040502795  UNINFORMATIVE   \n",
+       "998  1239740620194766848  UNINFORMATIVE   \n",
+       "999  1236131066596986882    INFORMATIVE   \n",
        "\n",
-       "[7927 rows x 2 columns]"
+       "                                                  Text  \n",
+       "0    Official death toll from #covid19 in the Unite...  \n",
+       "1    Dearest Mr. President @USER 1,169 coronavirus ...  \n",
+       "2    Latest Updates March 20 ⚠️5274 new cases and 3...  \n",
+       "3    真把公主不当干部 BREAKING: 21 people on Grand Princess...  \n",
+       "4    OKLAHOMA CITY — The State Department of Educat...  \n",
+       "..                                                 ...  \n",
+       "995  Coronavirus took hold in UK earlier than thoug...  \n",
+       "996  I talked with a man who is Rowan County’s seco...  \n",
+       "997  Governor Wolf delaying enforcement of non-life...  \n",
+       "998  The Sheriff's Department has reduced the jail ...  \n",
+       "999  BREAKING NEWS: 2 possible cases of #COVIDー19 i...  \n",
+       "\n",
+       "[7929 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_df.columns=[\"Informativeness\",\"text\"]"
+    "main_df.columns=[\"id\", \"Informativeness\",\"text\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,18 +584,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    4185\n",
+       "0    4187\n",
        "1    3742\n",
        "Name: Informativeness, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
