--- a/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
+++ b/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,13 +320,7 @@
       "[{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error with tweet:850358633246453762 \n",
       "[{'code': 63, 'message': 'User has been suspended.'}]\n",
-      "Error with tweet:1070028579407155200 \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Error with tweet:1070028579407155200 \n",
       "[{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error with tweet:850355741491855361 \n",
       "[{'code': 34, 'message': 'Sorry, that page does not exist.'}]\n",
@@ -1153,6 +1147,105 @@
    ],
    "source": [
     "main_df[\"Informativeness\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df=pd.read_pickle('./dataset3AllAPIData.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df= main_df[main_df[\"APIdata\"]!=\"\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df['text'] = main_df.apply (lambda row: row[\"APIdata\"].text, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df=main_df.drop(columns=['APIdata'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df.columns=[\"id\", \"Informativeness\", \"text\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Keep only english tweets\n",
+    "\n",
+    "def is_english(text):\n",
+    "\n",
+    "    try:\n",
+    "          language = detect(text)\n",
+    "    except:\n",
+    "          #These will be removed\n",
+    "          print(\"This row throws and error:\", text)\n",
+    "          return False;\n",
+    "    if(language=='en'):\n",
+    "      return True;\n",
+    "    else:\n",
+    "      return False;\n",
+    "\n",
+    "main_df=main_df[main_df.apply(lambda x: is_english(x['text']), axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df.to_pickle(\"./../dataset3Cleaned.pkl\")"
    ]
   },
   {
