--- a/dataset_cleaning/Dataset 6/load_clean_dataset_6.ipynb
+++ b/dataset_cleaning/Dataset 6/load_clean_dataset_6.ipynb
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame= frame.drop(frame.columns.difference([\"tweet_text\",\"label\"]), axis=1)"
+    "# frame= frame.drop(frame.columns.difference([\"tweet_text\",\"label\"]), axis=1)"
    ]
   },
   {
@@ -199,8 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame=frame[[\"label\",\"tweet_text\"]]\n",
-    "frame.columns=[\"Informativeness\",\"text\"]"
+    "frame=frame[[\"tweet_id\",\"label\",\"tweet_text\"]]\n",
+    "frame.columns=[\"id\",\"Informativeness\",\"text\"]"
    ]
   },
   {
@@ -255,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "20113"
+       "20101"
       ]
      },
      "execution_count": 8,
@@ -284,8 +284,8 @@
     {
      "data": {
       "text/plain": [
-       "1    17793\n",
-       "0     2320\n",
+       "1    17776\n",
+       "0     2325\n",
        "Name: Informativeness, dtype: int64"
       ]
      },
@@ -300,7 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame[\"id\"]=frame[\"id\"].apply(lambda x: int(x[1:-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
